Resolve the new gradle deprecations from: main -> mainClass, task <NAME> to tasks.register API